--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -11,10 +11,14 @@
 	</head>
 	<body>
 		<header>
-		
+	    <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet'
+            type='text/css'>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/libs/modernizr-2.0.6.min.js"></script>
 		</header>
 		<div id="main" role="main">
-			<canvas id="game" width="600" height="400">
+            <h1>Tic-Tac-Toe</h1>
+			<canvas id="game" width="300" height="300">
 				get a better browser!
 			</canvas>
 		</div>
